# agent-lifecycle

./: Dockerfile  Makefile  README.md  SECURITY.md  TODO.md  build.sh  go.mod  go.sum  main.go  pyproject.toml  rebrand.sh  test_rust_executor.py
.github/workflows/: auto-assign.yml  coderabbit.yml  golangci-lint.yaml
backend/config/: manage.go  wsgi.go
backend/core/: package.go
backend/db/: database_routers.go  package.go
backend/examples/: grpc_client_example.go
backend/protos/: generate_go_grpc.go
backend/scripts/: generate_grpc_code.go
backend/tests/: package.go
backend/utils/: grpc_server.go  simple_grpc_server.go
cmd/: build.go  cluster.go  delete.go  export.go  import.go  list.go  logs.go  logs_daemon.go  ping.go  policy.go  root.go  space.go  ssh.go  status.go  stop.go  troubleshoot.go  up.go  upgrade.go  version.go  workspace.go
cmd/agent/: agent.go  container_tunnel.go  daemon.go  docker_credentials.go  git_credentials.go  git_ssh_signature.go  git_ssh_signature_helper.go
cmd/completion/: suggestions.go
cmd/context/: context.go  create.go  delete.go  list.go  options.go  set_options.go  use.go
cmd/flags/: flags.go
cmd/helper/: check_provider_update.go  docker_credentials.go  fleet_helper.go  get_image.go  get_provider_name.go  get_workspace_config.go  get_workspace_name.go  get_workspace_uid.go  helper.go  sh.go  ssh_client.go  ssh_git_clone.go  ssh_server.go
cmd/ide/: ide.go  list.go  options.go  set_options.go  use.go
cmd/kcluster/: create.go  delete.go  kcluster.go  list.go
cmd/kled/: go.mod  main.go  simple.go
cmd/machine/: create.go  delete.go  inspect.go  list.go  (+5 more)
command_executor_rust/: Cargo.toml
command_executor_rust/src/: lib.rs
desktop/: eslint.config.js  lynx.config.js  openapi.yaml  package.json  rsbuild.config.ts
e2e/: e2e_suite_test.go
hack/: build-desktop.sh  build-e2e.sh  dev_devpod_pro.sh  rebuild.sh  unit-tests.sh
pro-beta/: cleanup-cert-manager.sh  complete-cert-manager-cleanup.sh  gitops-application.yaml  loadbalancer.yaml
(+670 files in other folders)
